test/functions/dinan/inconsistent_return_type_specified.good
inconsistent_return_type_specified.chpl:1: In function 'f':
inconsistent_return_type_specified.chpl:1: error: control reaches end of function that returns a value
  inconsistent_return_type_specified.chpl:7: called as f(x: int(64))
