test/functions/dinan/inconsistent_return_type_specified.chpl
proc f(x): int {
    if x == 0 {
        return 1024;
    }
}

var x = f(10);
